trunk/Archive2/41/4159757f5ab34c/output
main.cpp: In function 'int main()':
main.cpp:20:27: error: '__STDC_VERSION__' was not declared in this scope
     std::cout << words << __STDC_VERSION__ << std::endl;
                           ^
